Bug 336241 canDrop isn't called when just the drag and drop action changes. r=Neil,sr=roc